Agregar correciones de ortografia y gramatica

--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -358,7 +358,7 @@
 				</header>
 				
 				
-				<p>El ciclo de vida de un sistema de informacioón se refiere a todas las fases por las que pasa el sistema en cuestión desde su desarrollo, hasta que entre en uso por el cliente. El modelo tradicional del ciclo de vida es secuencial y presenta algunos problemas<small><sub>[2]</sub></small>. Entre estos destacan la dificultad para el cliente de definir todos los requisitos funcionales, y que la versión operativa del software no se verá hasta culminar el proyecto. A continuación se detallan las fases de desarrollo del software:</p>
+				<p>El ciclo de vida de un sistema de información se refiere a todas las fases por las que pasa el sistema en cuestión desde su desarrollo, hasta que entre en uso por el cliente. El modelo tradicional del ciclo de vida es secuencial y presenta algunos problemas<small><sub>[2]</sub></small>. Entre estos destacan la dificultad para el cliente de definir todos los requisitos funcionales, y que la versión operativa del software no se verá hasta culminar el proyecto. A continuación se detallan las fases de desarrollo del software:</p>
 				<div class="card-group py-4">
 					<div class="card">
 						<div class="card-body">
