Add sr-only header to content. Fix scrolling.

--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -28,7 +28,7 @@
 	</head>
 
 	<body data-spy="scroll" data-target="#data-scrollspy">
-		<div class="container">
+		<div class="container ">
 			<header class="py-4">
 				<h1>DAW y BD</h1>
 			</header>
@@ -66,6 +66,9 @@
 		</div>
 		
 		<section id="content" class="container">
+			<header>
+				<h2 class="sr-only">Laboratorio 1</h2>
+			</header>
 			<div class="row">
 				<div class="col-sm-9">
 					
@@ -167,15 +170,15 @@
 							<div class="card">
 								<div class="card-body">
 									<h5 class="card-title">¿Cuáles son las diferencias principales entre HTML 4 y HTML5?</h5>
-									<p class="card-text">HTML5 define una sintaxis que es compatible con HTML4 y XHTML 1.0. Por tanto, un salto de línea se puede escribir como &lt;br&gt; (HTML4) o &lt;br/&gt; (XHTML 1.0).</p>
-									<p class="card-text">Para definir el juego de caracteres se introduce un nuevo atributo para la etiqueta <meta>: &lt;meta charset=”UTF-8″&gt;</p>
+									<p class="card-text">HTML5 define una sintaxis que es compatible con HTML4 y XHTML 1.0. Por tanto, un salto de línea se puede escribir como <code>&lt;br&gt;</code> (HTML4) o <code>&lt;br/&gt;</code> (XHTML 1.0).</p>
+									<p class="card-text">Para definir el juego de caracteres se introduce un nuevo atributo para la etiqueta <code>&lt;meta&gt;</code>: <code>&lt;meta charset=”UTF-8″&gt;</code></p>
 									<p class="card-text">HTML5 permite incluir elementos de SVG y MathML.</p>
-									<p class="card-text">Se introducen nuevos elementos, como: section, article, aside, header, footer, etc.</p>
-									<p class="card-text">Se introducen nuevos atributos, como: media, charset, autofocus, placeholder, etc.</p>
-									<p class="card-text">Algunos elementos cambian, como: a, b, i, menu, etc.</p>
-									<p class="card-text">Algunos atributos cambian, como: type, name, summary, etc.</p>
-									<p class="card-text">Algunos elementos desaparecen, como: basefont, big, center, etc.</p>
-									<p class="card-text">Algunos atributos desaparecen, como: align, background, bgcolor, etc.</p>
+									<p class="card-text">Se introducen nuevos elementos, como: <code>section</code>, <code>article</code>, <code>aside</code>, <code>header</code>, <code>footer</code>, etc.</p>
+									<p class="card-text">Se introducen nuevos atributos, como: <code>media</code>, <code>charset</code>, <code>autofocus</code>, <code>placeholder</code>, etc.</p>
+									<p class="card-text">Algunos elementos cambian, como: <code>a</code>, <code>b</code>, <code>i</code>, <code>menu</code>, etc.</p>
+									<p class="card-text">Algunos atributos cambian, como: <code>type</code>, <code>name</code>, <code>summary</code>, etc.</p>
+									<p class="card-text">Algunos elementos desaparecen, como: <code>basefont</code>, <code>big</code>, <code>center</code>, etc.</p>
+									<p class="card-text">Algunos atributos desaparecen, como: <code>align</code>, <code>background</code>, <code>bgcolor</code>, etc.</p>
 								</div>
 							</div>
 							<div class="card">
