Add bullets to navbar

--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -18,7 +18,7 @@
 		<link href="css/custom.css" rel="stylesheet">
 		
 		<!-- Custom Fonts -->
-		<link href="https://fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Fjalla+One|Saira+Condensed|Yanone+Kaffeesatz" rel="stylesheet">
 		
 		<!-- Font Awesome -->
 		<link href="https://use.fontawesome.com/releases/v5.0.4/css/all.css" rel="stylesheet">
@@ -450,12 +450,12 @@
 					<div class="sidebar sticky">
 						<nav id="data-scrollspy">
 							<div id="list-example" class="list-group d-none d-lg-block">
-								<a class="list-group-item list-group-item-action" href="#intro">Introducción</a>
-								<a class="list-group-item list-group-item-action" href="#questions">Preguntas</a>
-								<a class="list-group-item list-group-item-action" href="#methods">Métodos</a>
-								<a class="list-group-item list-group-item-action" href="#errors">Errores</a>
-								<a class="list-group-item list-group-item-action" href="#databases">Ciclos</a>
-								<a class="list-group-item list-group-item-action" href="#sources">Bibliografía</a>
+								<a class="list-group-item list-group-item-action" href="#intro"><i class="fas fa-angle-right"></i> Introducción</a>
+								<a class="list-group-item list-group-item-action" href="#questions"><i class="fas fa-angle-right"></i> Preguntas</a>
+								<a class="list-group-item list-group-item-action" href="#methods"><i class="fas fa-angle-right"></i> Métodos</a>
+								<a class="list-group-item list-group-item-action" href="#errors"><i class="fas fa-angle-right"></i> Errores</a>
+								<a class="list-group-item list-group-item-action" href="#databases"><i class="fas fa-angle-right"></i> Ciclos</a>
+								<a class="list-group-item list-group-item-action" href="#sources"><i class="fas fa-angle-right"></i> Bibliografía</a>
 							</div>
 							<div class="wrapper text-center">
 								<div class="btn-group py-3 text-center" role="group" aria-label="Basic example">
