--- a/Lab1/lab3.html
+++ b/Lab1/lab3.html
@@ -9,7 +9,7 @@
 		<meta name="author" content="">
 		<link rel="icon" href="../../favicon.ico">
 
-		<title>LAB 1: Intro</title>
+		<title>LAB 3: CSS</title>
 
 		<!-- Bootstrap core CSS -->
 		<link href="css/bootstrap.min.css" rel="stylesheet">
@@ -45,7 +45,7 @@
 				<div class="collapse navbar-collapse" id="navbarNav">
 					<ul class="navbar-nav">
 						<li class="nav-item active">
-							<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+							<a class="nav-link" href="index.html">Home</a>
 						</li>
 						<li class="nav-item dropdown">
 							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -54,7 +54,7 @@
 							<div class="dropdown-menu" aria-labelledby="navbarDropdown">
 								<a class="dropdown-item" href="lab1.html">Lab 1</a>
 								<a class="dropdown-item" href="#">Lab 2</a>
-								<a class="dropdown-item" href="lab3.html">Lab 3</a>
+								<a class="dropdown-item" href="#">Lab 3 <span class="sr-only">(current)</span></a>
 							</div>
 						</li>
 						<li class="nav-item">
@@ -72,44 +72,87 @@
 			<header>
 				<h2 class="sr-only">Laboratorio 1</h2>
 			</header>
-			<!-- Main component for a primary marketing message or call to action -->
-			<article id="intro" class="jumbotron">
-				<div class="row">
-					<div class="col-xl-9">
+			<div class="row">
+				<div class="col-lg-9">
+					
+					<!-- Main component for a primary marketing message or call to action -->
+					<article id="intro" class="jumbotron">
+						<div class="row">
+							<div class="col-lg-9">
+								<header>
+									<h2>Lab 3: CSS</h2>
+								</header>
+								<p class="py-5">En este lab debemos agregar estilos <strong>CSS</strong> al laboratorio anterior y contestar nuevas preguntas.</p>
+							</div>
+							<div class="col-sm">
+								<div class="container-fluid">
+								<img src="images/css-3.svg" class="img-fluid img" alt="Responsive Image of CSS-3"></div>
+							</div>
+						</div>
+
+					</article>
+
+
+
+					<article id="questions_lab3" class="py-4">
 						<header>
-							<h2>Lab 1: Introducción</h2>
+							<h2>Preguntas</h2>
+							<h5 class="px-3">...y respuestas</h5>
 						</header>
-						<p class="py-5">Mi nombre es Juan Pablo Pino Bravo (A01205525). Soy un estudiante de <strong>Ingeniería en Sistemas Digitales y Robótica</strong> de quinto semestre. A pesar de que esta materia no es parte de mi plan, me llama mucho la atención para desarrollar proyectos que puedan involucar <strong>IoT</strong>. He hecho anteriormente algo de diseño web, principalmente páginas estáticas, aunque también he incursionado un poco en <i>PHP</i>, algo de bases de datos y <i>JavaScript</i>. Espero aprender mucho este semestre y estoy dispuesto a dar lo mejor de mí. </p>
-						<p>
-							<a class="btn btn-lg btn-primary" href="CV.pdf" role="button">Ver CV &raquo;</a>
-						</p>
-					</div>
-					<div class="col">
-						<div class="container-fluid">
-						<img src="images/iot_intro.png" class="img-fluid img" alt="Responsive Image of IOT"></div>
+
+						<!-- QUESTIONS TO ANSWER -->
+						<div class="card-group py-4 ">
+							<div class="card bg-dark">
+								<div class="card-body">
+									<h5 class="card-title">Como ingeniero de software ¿cuál es tu recomendación sobre el uso de !important en un CSS? </h5>
+									<p class="card-text">El <i>internet</i> es la <strong>red de redes</strong>, y como tal proporciona la estructura para conectar las computadoras alrededor del mundo. En cambio la <i>World Wide Web</i> es el <strong>modelo de acceso a información</strong> por medio del internet. Aunque estén relacionadas, el internet se refiere a la red física y la WWW al protocolo que se usa en ella.</p>
+								</div>
+							</div>
+							<div class="card bg-dark">
+								<div class="card-body">
+									<h5 class="card-title">Si se pone una imagen de fondo en una página HTML, ¿por qué debe escogerse con cuidado? </h5>
+									<p class="card-text">El <i>internet</i> es la <strong>red de redes</strong>, y como tal proporciona la estructura para conectar las computadoras alrededor del mundo. En cambio la <i>World Wide Web</i> es el <strong>modelo de acceso a información</strong> por medio del internet. Aunque estén relacionadas, el internet se refiere a la red física y la WWW al protocolo que se usa en ella.</p>
+								</div>
+							</div>
+						</div>
+						<div class="card-group bg-dark">
+							<div class="card bg-dark">
+								<div class="card-body">
+									<h5 class="card-title">Como ingeniero de software, ¿cuál es tu recomendación al elegir las unidades de un propiedad de estilo entre %, px y pt?</h5>
+									<p class="card-text">El <i>internet</i> es la <strong>red de redes</strong>, y como tal proporciona la estructura para conectar las computadoras alrededor del mundo. En cambio la <i>World Wide Web</i> es el <strong>modelo de acceso a información</strong> por medio del internet. Aunque estén relacionadas, el internet se refiere a la red física y la WWW al protocolo que se usa en ella.</p>
+								</div>
+							</div>
+							<div class="card bg-dark">
+								<div class="card-body">
+									<h5 class="card-title">¿Por qué el uso de una versión minimizada del CSS mejora el rendimiento del sitio?</h5>
+									<p class="card-text">Porque al consumir menos memoria es más rápido de cargar.</p>
+								</div>
+							</div>
+						</div>
+					</article>
+
+
+				</div>
+				<div class="col-lg-3">
+					<div class="sidebar sticky">
+						<nav id="data-scrollspy">
+							<div id="list-example" class="list-group d-none d-lg-block">
+								<a class="list-group-item list-group-item-action" href="#intro"><i class="fas fa-angle-right"></i> Introducción</a>
+								<a class="list-group-item list-group-item-action" href="#questions_lab3"><i class="fas fa-angle-right"></i> Preguntas</a>
+							</div>
+							<div class="wrapper text-center">
+								<div class="btn-group py-3 text-center" role="group" aria-label="Basic example">
+									<button type="button" class="btn btn-link"><i class="fab fa-2x fa-facebook-square"></i></button>
+									<button type="button" class="btn btn-link"><i class="fab fa-2x fa-instagram"></i></button>
+									<button type="button" class="btn btn-link"><i class="fab fa-2x fa-twitter-square"></i></button>
+									<button type="button" class="btn btn-link"><i class="fab fa-2x fa-slack"></i></button>
+								</div>
+							</div>
+						</nav>
 					</div>
 				</div>
-			</article>
+			</div>
 		</section>
-		
-		<section id="social" class="container">
-			<header>
-				<h2 class="sr-only">Social</h2>
-			</header>
-			<!-- Main component for a primary marketing message or call to action -->
-			<article id="intro">
-				<div class="wrapper text-center">
-					<div class="btn-group py-4 text-center" role="group" aria-label="Basic example">
-						<button type="button" class="btn btn-link"><i class="fab fa-2x fa-facebook-square"></i></button>
-						<button type="button" class="btn btn-link"><i class="fab fa-2x fa-instagram"></i></button>
-						<button type="button" class="btn btn-link"><i class="fab fa-2x fa-twitter-square"></i></button>
-						<button type="button" class="btn btn-link"><i class="fab fa-2x fa-slack"></i></button>
-					</div>
-				</div>
-			</article>
-		</section>
-		
-							
 		
 		<!-- Modal -->
 		<div class="modal fade" id="contact" tabindex="-1" role="dialog" aria-hidden="true">
@@ -173,11 +216,11 @@
 			</div>
 		</div>
 		
-		<footer class="footer bg-dark text-white mt-4">
+		<footer class="bg-dark text-white mt-4">
 			<div class="container-fluid py-4">
 				<div class="row">
 					<div class="col-md-6">
-						<span class="text-muted">Hecho con el editor <strong>Brackets</strong> - <a href="http://brackets.io/">http://brackets.io/</a></span>
+						Hecho con el editor <strong>Brackets</strong> - <a href="http://brackets.io/">http://brackets.io/</a>
 					</div>
 					<div class="col-md-3"></div>
 					<div class="col-md-3 text-right align-self-end">
