Change text in Lab 3

--- a/Lab1/lab3.html
+++ b/Lab1/lab3.html
@@ -15,7 +15,7 @@
 		<link href="css/bootstrap.min.css" rel="stylesheet">
 
 		<!-- Custom styles for this template -->
-		<link href="css/custom.css" rel="stylesheet">
+		<link href="css/custom.min.css" rel="stylesheet">
 		
 		<!-- Custom Fonts -->
 		<link href="https://fonts.googleapis.com/css?family=Fjalla+One|Saira+Condensed|Yanone+Kaffeesatz" rel="stylesheet">
@@ -104,28 +104,29 @@
 						<div class="card-group py-4 ">
 							<div class="card bg-dark">
 								<div class="card-body">
-									<h5 class="card-title">Como ingeniero de software ¿cuál es tu recomendación sobre el uso de !important en un CSS? </h5>
-									<p class="card-text">El <i>internet</i> es la <strong>red de redes</strong>, y como tal proporciona la estructura para conectar las computadoras alrededor del mundo. En cambio la <i>World Wide Web</i> es el <strong>modelo de acceso a información</strong> por medio del internet. Aunque estén relacionadas, el internet se refiere a la red física y la WWW al protocolo que se usa en ella.</p>
+									<h5 class="card-title">Como ingeniero de software ¿cuál es tu recomendación sobre el uso de <code>!important</code> en un CSS? </h5>
+									<p class="card-text">Al usar este modificador se ignoran todas las modificaciones subsecuentes. No es recomendable usar <code>!important</code>, en vez de esto se debería usar una buena jerarquía de especificidad de estilos CSS. En casos de conflictos se puede utilizar para que modificaciones generales no afecten otras específicas.</p>
 								</div>
 							</div>
 							<div class="card bg-dark">
 								<div class="card-body">
 									<h5 class="card-title">Si se pone una imagen de fondo en una página HTML, ¿por qué debe escogerse con cuidado? </h5>
-									<p class="card-text">El <i>internet</i> es la <strong>red de redes</strong>, y como tal proporciona la estructura para conectar las computadoras alrededor del mundo. En cambio la <i>World Wide Web</i> es el <strong>modelo de acceso a información</strong> por medio del internet. Aunque estén relacionadas, el internet se refiere a la red física y la WWW al protocolo que se usa en ella.</p>
+									<p class="card-text">Porque esta se repetirá en el fondo tanto horizontalmente, como verticalmente. Hay que tener cuidado que se pueda visualizar de la manera esperada.</p>
 								</div>
 							</div>
 						</div>
-						<div class="card-group bg-dark">
+						<div class="card-group">
 							<div class="card bg-dark">
 								<div class="card-body">
-									<h5 class="card-title">Como ingeniero de software, ¿cuál es tu recomendación al elegir las unidades de un propiedad de estilo entre %, px y pt?</h5>
-									<p class="card-text">El <i>internet</i> es la <strong>red de redes</strong>, y como tal proporciona la estructura para conectar las computadoras alrededor del mundo. En cambio la <i>World Wide Web</i> es el <strong>modelo de acceso a información</strong> por medio del internet. Aunque estén relacionadas, el internet se refiere a la red física y la WWW al protocolo que se usa en ella.</p>
+									<h5 class="card-title">Como ingeniero de software, ¿cuál es tu recomendación al elegir las unidades de una propiedad de estilo entre %, px y pt?</h5>
+									<p class="card-text">Es completamente dependiente de la aplicación en cuestión. <code>%</code> se usa para definir el tamaño de un elemento en función de otro (texto en funcion del tamaño de texto del <code>&lt;body&gt;</code> o secciones en relación al tamaño del <strong>viewport</strong>).</p>
+									<p><code>px</code> y <code>pt</code> se utilizan para definir objetos de tamaño fijo, el primero según el tamaño de un pixel en la pantalla en la que se muestre el contenido y el segundo según el tamaño de texto impreso</p>
 								</div>
 							</div>
 							<div class="card bg-dark">
 								<div class="card-body">
 									<h5 class="card-title">¿Por qué el uso de una versión minimizada del CSS mejora el rendimiento del sitio?</h5>
-									<p class="card-text">Porque al consumir menos memoria es más rápido de cargar.</p>
+									<p class="card-text">Porque al borrar todos los espacios y saltos de linea se reduce el tamaño del archivo, y consumir menos memoria es más rápido de cargar el contenido.</p>
 								</div>
 							</div>
 						</div>
