--- a/Lab1/lab1.html
+++ b/Lab1/lab1.html
@@ -15,7 +15,7 @@
 		<link href="css/bootstrap.min.css" rel="stylesheet">
 
 		<!-- Custom styles for this template -->
-		<link href="css/custom.css" rel="stylesheet">
+		<link href="css/custom.min.css" rel="stylesheet">
 		
 		<!-- Custom Fonts -->
 		<link href="https://fonts.googleapis.com/css?family=Fjalla+One|Saira+Condensed|Yanone+Kaffeesatz" rel="stylesheet">
