Add CSS shadows

--- a/Lab1/lab1.html
+++ b/Lab1/lab1.html
@@ -537,7 +537,7 @@
 			<div class="container-fluid py-4">
 				<div class="row">
 					<div class="col-md-6">
-						Hecho con el editor <strong>Brackets</strong> - <a href="http://brackets.io/">http://brackets.io/</a>
+						<span class="text-muted">Hecho con el editor <strong>Brackets</strong> - <a href="http://brackets.io/">http://brackets.io/</a></span>
 					</div>
 					<div class="col-md-3"></div>
 					<div class="col-md-3 text-right align-self-end">
