--- a/Lab1/lab3.html
+++ b/Lab1/lab3.html
@@ -131,6 +131,16 @@
 							</div>
 						</div>
 					</article>
+					
+					<article id="sources" class="py-4">
+						<header>
+							<h2>Bibliografía</h2>
+						</header>
+						<ul class="list-unstyled">
+							<li>[1] https://css-tricks.com/when-using-important-is-the-right-choice/</li>
+							<li>[2] https://www.w3schools.com/css/default.asp</li>
+						</ul>
+					</article>
 
 
 				</div>
@@ -140,6 +150,7 @@
 							<div id="list-example" class="list-group d-none d-lg-block">
 								<a class="list-group-item list-group-item-action" href="#intro"><i class="fas fa-angle-right"></i> Introducción</a>
 								<a class="list-group-item list-group-item-action" href="#questions_lab3"><i class="fas fa-angle-right"></i> Preguntas</a>
+								<a class="list-group-item list-group-item-action" href="#sources"><i class="fas fa-angle-right"></i> Bibliografía</a>
 							</div>
 							<div class="wrapper text-center">
 								<div class="btn-group py-3 text-center" role="group" aria-label="Basic example">
@@ -221,7 +232,7 @@
 			<div class="container-fluid py-4">
 				<div class="row">
 					<div class="col-md-6">
-						Hecho con el editor <strong>Brackets</strong> - <a href="http://brackets.io/">http://brackets.io/</a>
+						<span class="text-muted">Hecho con el editor <strong>Brackets</strong> - <a href="http://brackets.io/">http://brackets.io/</a></span>
 					</div>
 					<div class="col-md-3"></div>
 					<div class="col-md-3 text-right align-self-end">
