--- a/Lab1/lab1.html
+++ b/Lab1/lab1.html
@@ -52,9 +52,10 @@
 								Labs
 							</a>
 							<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-								<a class="dropdown-item" href="#">Lab 1 <span class="sr-only">(current)</span></a>
+								<a class="dropdown-item" href="lab1.html">Lab 1</a>
 								<a class="dropdown-item" href="#">Lab 2</a>
 								<a class="dropdown-item" href="lab3.html">Lab 3</a>
+								<a class="dropdown-item" href="lab4.html">Lab 4</a>
 							</div>
 						</li>
 						<li class="nav-item">
