--- a/Lab1/q_1.html
+++ b/Lab1/q_1.html
@@ -9,7 +9,7 @@
 		<meta name="author" content="">
 		<link rel="icon" href="../../favicon.ico">
 
-		<title>LAB 3: CSS</title>
+		<title>Cuestionario: Bases de Datos</title>
 
 		<!-- Bootstrap core CSS -->
 		<link href="css/bootstrap.min.css" rel="stylesheet">
@@ -54,8 +54,7 @@
 							<div class="dropdown-menu" aria-labelledby="navbarDropdown">
 								<a class="dropdown-item" href="lab1.html">Lab 1</a>
 								<a class="dropdown-item" href="#">Lab 2</a>
-								<a class="dropdown-item" href="lab3.html">Lab 3</a>
-								<a class="dropdown-item" href="lab4.html">Lab 4</a>
+								<a class="dropdown-item" href="#">Lab 3 <span class="sr-only">(current)</span></a>
 							</div>
 						</li>
 						<li class="nav-item">
