--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -45,7 +45,7 @@
 				<div class="collapse navbar-collapse" id="navbarNav">
 					<ul class="navbar-nav">
 						<li class="nav-item active">
-							<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+							<a class="nav-link" href="index.html">Home</a>
 						</li>
 						<li class="nav-item dropdown">
 							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -55,6 +55,7 @@
 								<a class="dropdown-item" href="lab1.html">Lab 1</a>
 								<a class="dropdown-item" href="#">Lab 2</a>
 								<a class="dropdown-item" href="lab3.html">Lab 3</a>
+								<a class="dropdown-item" href="lab4.html">Lab 4</a>
 							</div>
 						</li>
 						<li class="nav-item">
