Add answers to Lab 4

--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -37,7 +37,7 @@
 			</header>
 
 			<!-- Static navbar -->
-			<nav class="navbar navbar-expand-lg navbar-light bg-light rounded">
+			<nav class="navbar navbar-expand-lg navbar-light bg-light rounded shadow">
 				<a class="navbar-brand" href="#"><img src="images/logo.png" width="30" height="30" class="d-inline-block " alt=""> </a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
@@ -74,7 +74,7 @@
 				<h2 class="sr-only">Laboratorio 1</h2>
 			</header>
 			<!-- Main component for a primary marketing message or call to action -->
-			<article id="intro" class="jumbotron">
+			<article id="intro" class="jumbotron shadow">
 				<div class="row">
 					<div class="col-xl-9">
 						<header>
