--- a/Lab1/lab1.html
+++ b/Lab1/lab1.html
@@ -31,28 +31,28 @@
 	</head>
 
 	<body data-spy="scroll" data-target="#data-scrollspy">
-		<div class="container ">
+		<div class="container">
 			<header class="py-4">
 				<h1>DAW y BD</h1>
 			</header>
 
 			<!-- Static navbar -->
-			<nav class="navbar navbar-expand-lg navbar-light bg-light rounded">
+			<nav class="navbar navbar-expand-lg navbar-light bg-light rounded shadow">
 				<a class="navbar-brand" href="#"><img src="images/logo.png" width="30" height="30" class="d-inline-block " alt=""> </a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
 				<div class="collapse navbar-collapse" id="navbarNav">
 					<ul class="navbar-nav">
-						<li class="nav-item active">
+						<li class="nav-item">
 							<a class="nav-link" href="index.html">Home</a>
 						</li>
-						<li class="nav-item dropdown">
+						<li class="nav-item dropdown active">
 							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 								Labs
 							</a>
 							<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-								<a class="dropdown-item" href="lab1.html">Lab 1</a>
+								<a class="dropdown-item active" href="lab1.html">Lab 1</a>
 								<a class="dropdown-item" href="#">Lab 2</a>
 								<a class="dropdown-item" href="lab3.html">Lab 3</a>
 								<a class="dropdown-item" href="lab4.html">Lab 4</a>
@@ -77,7 +77,7 @@
 				<div class="col-lg-9">
 					
 					<!-- Main component for a primary marketing message or call to action -->
-					<article id="intro" class="jumbotron">
+					<article id="intro" class="jumbotron shadow">
 						<div class="row">
 							<div class="col-lg">
 								<header>
@@ -106,7 +106,7 @@
 
 						<!-- QUESTIONS TO ANSWER -->
 						<div class="card-columns py-4">
-							<div class="card text-white bg-primary">
+							<div class="card text-white bg-primary shadow">
 								<ul class="list-group list-group-flush bg-primary">
 									<li class="list-group-item bg-primary"><h5>URL</h5><p class="card-text">Hace un pedido de datos a un recurso especificado.</p></li>
 									<li class="list-group-item bg-primary"><h5>MIME</h5><p class="card-text">Es similar al método GET, pero la petición solo regresa <i>headers</i> mas no el cuerpo del documento.</p></li>
@@ -118,7 +118,7 @@
 									<p class="card-text">El <i>internet</i> es la <strong>red de redes</strong>, y como tal proporciona la estructura para conectar las computadoras alrededor del mundo. En cambio la <i>World Wide Web</i> es el <strong>modelo de acceso a información</strong> por medio del internet. Aunque estén relacionadas, el internet se refiere a la red física y la WWW al protocolo que se usa en ella.</p>
 								</div>
 							</div>
-							<div class="card text-white bg-primary">
+							<div class="card text-white bg-primary shadow">
 								<ul class="list-group list-group-flush bg-primary">
 									<li class="list-group-item text-dark"><h4>HTTP</h4><p class="card-text">Descripción de métodos utilizados.</p></li>
 									<li class="list-group-item bg-primary"><h5>GET</h5><p class="card-text">Hace un pedido de datos a un recurso especificado.</p></li>
