--- a/Lab1/lab3.html
+++ b/Lab1/lab3.html
@@ -37,24 +37,24 @@
 			</header>
 
 			<!-- Static navbar -->
-			<nav class="navbar navbar-expand-lg navbar-light bg-light rounded">
+			<nav class="navbar navbar-expand-lg navbar-light bg-light rounded shadow">
 				<a class="navbar-brand" href="#"><img src="images/logo.png" width="30" height="30" class="d-inline-block " alt=""> </a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
 				<div class="collapse navbar-collapse" id="navbarNav">
 					<ul class="navbar-nav">
-						<li class="nav-item active">
+						<li class="nav-item">
 							<a class="nav-link" href="index.html">Home</a>
 						</li>
-						<li class="nav-item dropdown">
+						<li class="nav-item dropdown active">
 							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 								Labs
 							</a>
 							<div class="dropdown-menu" aria-labelledby="navbarDropdown">
 								<a class="dropdown-item" href="lab1.html">Lab 1</a>
 								<a class="dropdown-item" href="#">Lab 2</a>
-								<a class="dropdown-item" href="lab3.html">Lab 3</a>
+								<a class="dropdown-item active" href="lab3.html">Lab 3</a>
 								<a class="dropdown-item" href="lab4.html">Lab 4</a>
 							</div>
 						</li>
@@ -77,7 +77,7 @@
 				<div class="col-lg-9">
 					
 					<!-- Main component for a primary marketing message or call to action -->
-					<article id="intro" class="jumbotron">
+					<article id="intro" class="jumbotron shadow">
 						<div class="row">
 							<div class="col-lg-9">
 								<header>
