--- a/Lab1/lab4.html
+++ b/Lab1/lab4.html
@@ -56,6 +56,8 @@
 								<a class="dropdown-item" href="#">Lab 2</a>
 								<a class="dropdown-item" href="lab3.html">Lab 3</a>
 								<a class="dropdown-item active" href="lab4.html">Lab 4</a>
+								<div class="dropdown-divider"></div>
+          						<a class="dropdown-item" href="q_1.html">Cuestionario 1</a>
 							</div>
 						</li>
 						<li class="nav-item">
@@ -71,7 +73,7 @@
 		
 		<section id="content" class="container">
 			<header>
-				<h2 class="sr-only">Laboratorio 1</h2>
+				<h2 class="sr-only">Laboratorio 4</h2>
 			</header>
 			<div class="row">
 				<div class="col-lg-9">
